# Genomics_2

./: .env  .gitignore  Project2_starter_code copy.ipynb  README.md  answers.md  code.ipynb  main.ipynb  pyproject.toml  requirements.txt  the_wrong_way.ipynb
results/: cluster_membership.csv  cluster_membership_plaf.csv  pred_props.csv
