[project]
name = "ml4g-project-2-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "harmonypy>=0.0.10",
    "ipykernel>=7.1.0",
    "leidenalg>=0.11.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scanpy>=1.11.5",
    "scvi-tools>=1.4.0.post1",
]
